--- a/a10-A/style.css
+++ b/a10-A/style.css
@@ -17,7 +17,11 @@ body {
     pointer-events: none;
 }
 
-#chart {
+#bar-chart {
     margin: 0 auto;
     text-align: center;
+}
+
+#pie-chart {
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
